updated login/map/contact us

--- a/contactus.html
+++ b/contactus.html
@@ -45,18 +45,17 @@
         <a href="#"></a><img src="public/images/contact-us.jpeg" class= "photo-image" alt="On a black chalkboard, there is a depiction of an envelope, a phone and the at symbol over the word 'Contact Us', near a hand with chalk in the person's fingertips.">
         <div class="content-container-3">
             <p>Hello, you've reached our contact page!</p>
-            <p>Please see our parameters of outreach and let's coordinate a meeting!</p>
+            <p>Please see parameters of outreach and click our names to coordinate!</p>
             <p>If you need immediate assistance, please see the</p>
-            <p>"Book a Practitioner" Link in the bottom of the document.</p>
+            <p>"Book a Practitioner" Link in the bottom of the document to coordinate with Kit.</p>
         </div>
     </section>
     <h2 class = "content-container-section title-tinker">Schedule Meeting with a Practitioner :]</h2>
-    <section class="content-container-2 side-scroll-mobile">
-        <!-- 5/2: cohort links for website/social media/ LinkedIn -->
+    <section class="content-container-2 side-scroll-mobile link-styling">
         <div class="card mint">
-            <a href="#"></a><img src="public/images/KIT.jpeg" class="template" alt="a picture of Kit, a Black woman smiling with a Black dress and flowers of varying colors, with a red rose in their right ear">
+            <img src="public/images/KIT.jpeg" class="template" alt="a picture of Kit, a Black woman smiling with a Black dress and flowers of varying colors, with a red rose in their right ear">
             <div class="card-container">
-                <h3><b>Kit Fenrir Amreik (they/she)</b></h3> 
+                <a href="https://www.linkedin.com/in/kit-amreik/"><h3><b>Kit Fenrir Amreik (they/she)</b></h3></a>
                 <br>
                     <p> Email: kitdamreik@gmail.com</p> 
                     <p> Phone: [###-###-####] </p>
@@ -78,19 +77,19 @@
             <div class="card-container">
                 <h3><b>Chelsea Colby (she/they)</b></h3> 
                 <br>
-                    <p> Email: name@gmail.com</p> 
+                    <p> Email: chelsea23lynn@gmail.com</p> 
                     <p> Phone: [###-###-####] </p>
-                    <p> Best Time to Reach: anytime from [timeframe] EST </p>  
+                    <p> Best Time to Reach: depends on the time of year, TBH but I'd say generally 3 PM - 6 PM </p>  
             </div>
         </div>
         <div class="card orchid-crayola">
-            <a href="#"></a><img src="public/images/CORI.jpeg" class="template" alt="a picture of Cori Falco, a White person with makeup on against a beach background, smiling with a light blue floral top">
+            <img src="public/images/CORI.jpeg" class="template" alt="a picture of Cori Falco, a White person with makeup on against a beach background, smiling with a light blue floral top">
             <div class="card-container">
-                <h3><b>Cori Falco (she/her)</b></h3> 
+                <a href="https://www.linkedin.com/in/cori-falco-5b8887a5/"><h3><b>Cori Falco (she/her)</b></h3></a>
                 <br>
-                    <p> Email: name@gmail.com</p> 
+                    <p> Email: corifalco@gmail.com</p> 
                     <p> Phone: [###-###-####] </p>
-                    <p> Best Time to Reach: anytime from [timeframe] EST </p>  
+                    <p> Best Time to Reach: general availability - evenings after 6 pm EST </p>  
             </div>
         </div>
         <div class="card gold-crayola">
@@ -108,19 +107,19 @@
             <div class="card-container">
                 <h3><b>Rachel Freed Sussman (any pronoun)</b></h3> 
                 <br>
-                    <p> Email: name@gmail.com</p> 
+                    <p> Email: rachelsussman114@gmail.com</p> 
                     <p> Phone: [###-###-####] </p>
-                    <p> Best Time to Reach: anytime from [timeframe] EST </p>  
+                    <p> Best Time to Reach: please email! </p>  
             </div>
         </div>
         <div class="card vivid-sky-blue">
-            <a href="#"></a><img src="public/images/THERESA.jpg" class="template" alt="a picture of Theresa Yannetty, a White person smiling with light makeup coupled with a stuffed animal in a chair">
+            <img src="public/images/THERESA.jpg" class="template" alt="a picture of Theresa Yannetty, a White person smiling with light makeup coupled with a stuffed animal in a chair">
             <div class="card-container">
-                <h3><b>Theresa Yannetty (she/her)</b></h3> 
+                <a href="https://www.linkedin.com/in/theresa-yannetty-1a799944/"><h3><b>Theresa Yannetty (she/her)</b></h3></a>
                 <br>
-                    <p> Email: name@gmail.com</p> 
+                    <p> Email: tyannetty@gmail.com</p> 
                     <p> Phone: [###-###-####] </p>
-                    <p> Best Time to Reach: anytime from [timeframe] EST </p>  
+                    <p> Best Time to Reach: Between 9 and noon, then 2 and 5, EST </p>  
             </div>
         </div>
         <div class="card medium-purple">
