--- a/login.html
+++ b/login.html
@@ -46,7 +46,7 @@
             <legend>
                 <fieldset>
                     <label for="Email">Email Address</label>
-                    <input type="Email" name="Email" id="Email" placeholder="Email" minlength="10" required />>
+                    <input type="Email" name="Email" id="Email" placeholder="Email" minlength="10" required />
                 </fieldset>
                 <br>
                 <fieldset>
