--- a/contactus.html
+++ b/contactus.html
@@ -53,77 +53,84 @@
     <h2 class = "content-container-section title-tinker">Schedule Meeting with a Practitioner :]</h2>
     <section class="content-container-2 side-scroll-mobile link-styling">
         <div class="card mint">
-            <img src="public/images/KIT.jpeg" class="template" alt="a picture of Kit, a Black woman smiling with a Black dress and flowers of varying colors, with a red rose in their right ear">
+            <a href="https://www.linkedin.com/in/kit-amreik/"><img src="public/images/KIT.jpeg" class="template" alt="a picture of Kit, a Black woman smiling with a Black dress and flowers of varying colors, with a red rose in their right ear"></a>
             <div class="card-container">
-                <a href="https://www.linkedin.com/in/kit-amreik/"><h3><b>Kit Fenrir Amreik (they/she)</b></h3></a>
+                <h3><b>Kit Fenrir Amreik (they/she)</b></h3>
                 <br>
-                    <p> Email: kitdamreik@gmail.com</p> 
+                    <p> Email: kitdamreik
+                        @gmail.com</p> 
                     <p> Phone: [###-###-####] </p>
                     <p> Best Time to Reach: anytime from 12pm-9pm EST </p>  
             </div>
         </div>
         <div class="card vivid-sky-blue">
-            <a href="#"></a><img src="public/images/YESI.jpeg" class="template" alt="a picture of Yesinia JJ, a Black person with a pink afro and clear framed glasses looks at the camera">
+            <a href="#"><img src="public/images/YESI.jpeg" class="template" alt="a picture of Yesinia JJ, a Black person with a pink afro and clear framed glasses looks at the camera"></a>
             <div class="card-container">
                 <h3><b>Yesinia JJ (she/her)</b></h3> 
                 <br>
-                    <p> Email: name@gmail.com</p> 
+                    <p> Email: name
+                        @gmail.com</p> 
                     <p> Phone: [###-###-####] </p>
                     <p> Best Time to Reach: anytime from [timeframe] EST </p>   
             </div>
         </div>
+        <div class="card gold-crayola">
+            <a href="#"><img src="public/images/KRIS.jpg" class="template" alt="a picture of Kristopher JT Toma-Lee, a 35 y/o genderqueer trans guy from Massachusetts. They are holding their phone, wearing a black undershirt and a green and blue shirt."></a>
+            <div class="card-container">
+                <h3><b>Kristopher JT Toma-Lee (they/he)</b></h3> 
+                <br>
+                    <p> Email: name
+                        @gmail.com</p> 
+                    <p> Phone: [###-###-####] </p>
+                    <p> Best Time to Reach: anytime from [timeframe] EST </p>  
+            </div>
+        </div>
         <div class="card medium-purple">
-            <a href="#"></a><img src="public/images/CHELSEA.JPEG" class="template" alt="a picture of Chelsea Colby, a White person against a grey background, wearing a blue sweater, and smiling with leopard print glasses.">
+            <a href="#"><img src="public/images/CHELSEA.JPEG" class="template" alt="a picture of Chelsea Colby, a White person against a grey background, wearing a blue sweater, and smiling with leopard print glasses."></a>
             <div class="card-container">
                 <h3><b>Chelsea Colby (she/they)</b></h3> 
                 <br>
-                    <p> Email: chelsea23lynn@gmail.com</p> 
+                    <p> Email: chelsea23lynn
+                        @gmail.com</p> 
                     <p> Phone: [###-###-####] </p>
                     <p> Best Time to Reach: depends on the time of year, TBH but I'd say generally 3 PM - 6 PM </p>  
             </div>
         </div>
         <div class="card orchid-crayola">
-            <img src="public/images/CORI.jpeg" class="template" alt="a picture of Cori Falco, a White person with makeup on against a beach background, smiling with a light blue floral top">
+            <a href="https://www.linkedin.com/in/cori-falco-5b8887a5/"><img src="public/images/CORI.jpeg" class="template" alt="a picture of Cori Falco, a White person with makeup on against a beach background, smiling with a light blue floral top"></a>
             <div class="card-container">
-                <a href="https://www.linkedin.com/in/cori-falco-5b8887a5/"><h3><b>Cori Falco (she/her)</b></h3></a>
+                <h3><b>Cori Falco (she/her)</b></h3>
                 <br>
-                    <p> Email: corifalco@gmail.com</p> 
+                    <p> Email: corifalco
+                        @gmail.com</p> 
                     <p> Phone: [###-###-####] </p>
                     <p> Best Time to Reach: general availability - evenings after 6 pm EST </p>  
             </div>
         </div>
-        <div class="card gold-crayola">
-            <a href="#"></a><img src="public/images/KRIS.jpg" class="template" alt="a picture of Kristopher JT Toma-Lee, a 35 y/o genderqueer trans guy from Massachusetts. They are holding their phone, wearing a black undershirt and a green and blue shirt.">
-            <div class="card-container">
-                <h3><b>Kristopher JT Toma-Lee (they/he)</b></h3> 
-                <br>
-                    <p> Email: name@gmail.com</p> 
-                    <p> Phone: [###-###-####] </p>
-                    <p> Best Time to Reach: anytime from [timeframe] EST </p>  
-            </div>
-        </div>
         <div class="card mint">
-            <a href="#"></a><img src="public/images/RACHEL.JPG" class="template" alt="a picture of Rachel Freed Sussman, a White person smiling and snuggled in a blanket against a beach background">
+            <a href="#"><img src="public/images/RACHEL.JPG" class="template" alt="a picture of Rachel Freed Sussman, a White person smiling and snuggled in a blanket against a beach background"></a>
             <div class="card-container">
                 <h3><b>Rachel Freed Sussman (any pronoun)</b></h3> 
                 <br>
-                    <p> Email: rachelsussman114@gmail.com</p> 
+                    <p> Email: rachelsussman
+                        114@gmail.com</p> 
                     <p> Phone: [###-###-####] </p>
-                    <p> Best Time to Reach: please email! </p>  
+                    <p> Best Time to Reach: Please email! </p>  
             </div>
         </div>
         <div class="card vivid-sky-blue">
-            <img src="public/images/THERESA.jpg" class="template" alt="a picture of Theresa Yannetty, a White person smiling with light makeup coupled with a stuffed animal in a chair">
+            <a href="https://www.linkedin.com/in/theresa-yannetty-1a799944/"><img src="public/images/THERESA.jpg" class="template" alt="a picture of Theresa Yannetty, a White person smiling with light makeup coupled with a stuffed animal in a chair"></a>
             <div class="card-container">
-                <a href="https://www.linkedin.com/in/theresa-yannetty-1a799944/"><h3><b>Theresa Yannetty (she/her)</b></h3></a>
+                <h3><b>Theresa Yannetty (she/her)</b></h3>
                 <br>
-                    <p> Email: tyannetty@gmail.com</p> 
+                    <p> Email: tyannetty
+                        @gmail.com</p> 
                     <p> Phone: [###-###-####] </p>
                     <p> Best Time to Reach: Between 9 and noon, then 2 and 5, EST </p>  
             </div>
         </div>
-        <div class="card medium-purple">
-            <a href="#"></a><img src="public/images/TIM.jpg" class="template" alt="a picture of Timothy Scott Crumley, a White person smiling with a blue shirt, crosslegged against a neutral background">
+        <div class="card gold-crayola">
+            <a href="#"><img src="public/images/TIM.jpg" class="template" alt="a picture of Timothy Scott Crumley, a White person smiling with a blue shirt, crosslegged against a neutral background"></a>
             <div class="card-container">
                 <h3><b>Timothy Scott Crumley (he/him)</b></h3> 
                 <br>
@@ -159,7 +166,7 @@
                 <h2 class = "mini-container">Learn More About Class Structure</h2>
                 <p>["Creativity is intelligence having fun- Albert Einstein"]</p>
                 <p class="center-text-paragraph">
-                    <ul class="center-text-line-items">
+                    <ul class="left-text-line-items">
                         <li>What Does A Semester Look Like?</li>
                         <br>
                         <li>The Class Structure and Learning Flow</li>
@@ -171,7 +178,7 @@
             <div class="link-styling">
                 <h2 class = "mini-container">Call to Action</h2>
                 <p class="center-text-paragraph">
-                    <ul class="center-text-line-items">
+                    <ul class="left-text-line-items">
                         <li>Donate Here</li>
                         <br>
                         <li>Collaborate & Capacity Build</li>
