--- a/map.html
+++ b/map.html
@@ -102,7 +102,7 @@
                 <h2 class = "mini-container">Learn More About Class Structure</h2>
                 <p>["Creativity is intelligence having fun- Albert Einstein"]</p>
                 <p class="center-text-paragraph">
-                    <ul class="center-text-line-items">
+                    <ul class="left-text-line-items">
                         <li>What Does A Semester Look Like?</li>
                         <br>
                         <li>The Class Structure and Learning Flow</li>
@@ -114,7 +114,7 @@
             <div class="link-styling">
                 <h2 class = "mini-container">Call to Action</h2>
                 <p class="center-text-paragraph">
-                    <ul class="center-text-line-items">
+                    <ul class="left-text-line-items">
                         <li>Donate Here</li>
                         <br>
                         <li>Collaborate & Capacity Build</li>
