--- a/tj-answers.html
+++ b/tj-answers.html
@@ -18,7 +18,7 @@
     <header>
         <div class="header-wrapper">
             <div class = "link-styling mobile-container">
-                <a href="index.html"></a><img src ="public/images/Cookie-logo.png" alt="A picture of an animal, with a cat-like smiling face with a turtle's body is the logo of this website.">
+                <a href="index.html"><img src ="public/images/Cookie-logo.png" alt="A picture of an animal, with a cat-like smiling face with a turtle's body is the logo of this website.">
                 </a>
             </div>
             <nav class="nav-bar link-styling open-sesame"> 
