--- a/index.html
+++ b/index.html
@@ -14,7 +14,29 @@
 </head>
 <body>
     <title>Index Page</title>
-    
+    <header>
+        <div class="header-wrapper">
+            <div class = "link-styling mobile-container">
+                <a href="index.html"><img src ="public/images/Cookie-logo.png" alt="A picture of an animal, with a cat-like smiling face with a turtle's body is the logo of this website.">
+                </a>
+            </div>
+            <nav class="nav-bar link-styling open-sesame"> 
+                <ul class="nav-bar-list left-text-line-items">
+                    <li><a href="index.html">Index</a></li>
+                    <li><a href="videogallery.html">About</a></li>
+                    <li><a href="login.html">Login</a></li>
+                    <li> <a href="tj-quiz.html">TJ Quiz</a></li>
+                </ul>
+            </nav>
+            <div class = "link-styling mobile-container">
+                <button class = "hamburger">
+                    <a href="javascript:void(0);" class="menu" for="open-sesame">
+                        <i class="fa fa-bars"></i>
+                    </a>
+                </button> 
+            </div>
+        </div>
+    </header>
 <div class="content-container link-styling">
     <section class="content-container-section">
         <h1>Index Page</h1>
