--- a/tj-quiz.html
+++ b/tj-quiz.html
@@ -92,7 +92,7 @@
         </ul>
     </section>
     <h3> Thanks for taking my quiz!</h3>
-    <div class="content-container-3">
+    <div class="content-container-3 link-styling">
         <a href="./tj-answers.html">Check answers here!</a>
     </div>
 </div>
