--- a/admin.html
+++ b/admin.html
@@ -17,15 +17,15 @@
     <header>
         <div class="header-wrapper">
             <div class = "link-styling mobile-container">
-                <a href="index.html"></a><img src ="public/images/Cookie-logo.png" alt="A picture of an animal, with a cat-like smiling face with a turtle's body is the logo of this website.">
+                <a href="index.html"><img src ="public/images/Cookie-logo.png" alt="A picture of an animal, with a cat-like smiling face with a turtle's body is the logo of this website.">
                 </a>
             </div>
             <nav class="nav-bar link-styling open-sesame"> 
                 <ul class="nav-bar-list left-text-line-items">
                     <li><a href="index.html">Index</a></li>
                     <li><a href="login.html">Login</a></li>
-                    <li><a href="admin.html">Admin</a>
-                    </li>
+                    <li><a href="admin.html">Admin</a></li>
+                    <li><a href="register.html">Register!</a></li>
                 </ul>
             </nav>
             <div class = "link-styling mobile-container">
@@ -45,12 +45,20 @@
         <div class="content-container-3 card mint">
             <a href="/createlog.html"><h2>CREATE LOG</h2></a>
         </div>
+        <div class="content-container-3 card gold-crayola">
+            <a href="/readlog.html"><h2>READ LOG</h2></a>
+        </div>
         <div class="content-container-3 card vivid-sky-blue">
             <a href="/updatelog.html"><h2>UPDATE LOG</h2></a>
         </div>
         <div class="content-container-3 card hot-pink">
             <a href="/deletelog.html"><h2>DELETE LOG</h2></a>
         </div>
+    </section>
+    <section class="content-container-3 center-button">
+        <button class="yellow-button link-styling">
+            <a href="/login.html" role="button">Logout</a>
+        </button>
     </section>
 </div>
 <footer class = "footer"> 
