--- a/readlog.html
+++ b/readlog.html
@@ -13,7 +13,7 @@
     <script defer src="./scripts/scripts.js"></script>
 </head>
 <body>
-    <title>Login</title>
+    <title>Admin- Read A Log</title>
     <header>
         <div class="header-wrapper">
             <div class = "link-styling mobile-container">
@@ -23,9 +23,9 @@
             <nav class="nav-bar link-styling open-sesame"> 
                 <ul class="nav-bar-list left-text-line-items">
                     <li><a href="index.html">Index</a></li>
-                    <li><a href="videogallery.html">About</a></li>
                     <li><a href="login.html">Login</a></li>
-                    <li> <a href="tj-quiz.html">TJ Quiz</a></li>
+                    <li><a href="admin.html">Admin</a>
+                    </li>
                 </ul>
             </nav>
             <div class = "link-styling mobile-container">
@@ -39,34 +39,15 @@
     </header>
 <div class="content-container">
     <section class="content-container-section">
-        <h1>Login Page</h1>
+        <h1>Read A Log</h1>
     </section>
-    <section class="content-container-2 gold-crayola">
-        <form action="admin.html" method="POST">
-            <legend>
-                <fieldset>
-                    <label for="Email">Email Address</label>
-                    <input type="Email" name="Email" id="Email" placeholder="Email" minlength="10" required />
-                </fieldset>
-                <br>
-                <fieldset>
-                    <label for="Password">Password</label>
-                    <input type="Password" name="Password" id="Password" placeholder="Password" minlength="6" required />
-                </fieldset>
-                <br>
-                <section class= "center-button">
-                    <button class="yellow-button link-styling">
-                        <a href="/admin.html" role="button">Submit</a>
-                    </button>
-                </section>
-                <br>
-                <section class= "center-button">
-                    <button class="yellow-button link-styling">
-                        <a href="/auth/google" role="button">Sign In with Google</a>
-                    </button>
-                </section>
-            </legend>
-        </form>
+    <section class="content-container-2 naples-yellow"> 
+        <div class="content-container-3 card gold-crayola">
+            <span>
+                Landing Page for Form Entries
+            </span>
+            <br>
+        </div>
     </section>
 </div>
 <footer class = "footer"> 
@@ -85,4 +66,3 @@
 </footer>
 </body>
 </html>
-
