--- a/tj-answers.html
+++ b/tj-answers.html
@@ -51,7 +51,7 @@
             </ol>
         </section>
         <h3> Thanks for taking my quiz!</h3>
-        <div class="content-container-3">
+        <div class="content-container-3 link-styling">
             <a href="./tj-quiz.html"><p>Return to Quiz </p></a>
             <a href="https://www.restorecircles.love/the-mechanics"><p>Source: The Circle Process and the Medicine Wheel </p></a>
         </div>
